--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="fa">
-<head> 
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ثبت نام ورزشکاران</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/rastikerdar/vazir-font@v30.1.0/dist/font-face.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
+        @font-face {
+            font-family: 'IRANSans';
+            src: url('https://cdn.jsdelivr.net/gh/rastikerdar/iransans@5.0.0/dist/fonts/ttf/IRANSansWeb.ttf') format('truetype');
+        }
         body {
-            font-family: 'Vazir', sans-serif;
+            font-family: 'IRANSans', sans-serif;
         }
     </style>
 </head>
