--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         
         <div class="form-group">
             <label for="time">ساعت تمرین:</label>
-            <input type="time" id="time" name="time" required>
+            <select id="time" name="time" required></select>
         </div>
 
         <button type="submit">ثبت نام</button>
