--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ثبت نام ورزشکاران</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         @font-face {
             font-family: 'IRANSans';
@@ -75,7 +74,7 @@
             <select id="time" name="time" required></select>
         </div>
 
-        <button type="submit">ثبت نام</button>
+        <button type="submit" class="submit-btn">ثبت نام</button>
     </form>
     
     <h2>ورزشکاران ثبت شده</h2>
