--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مدیریت ورزشکاران</title>
     <link rel="stylesheet" href="styles.css"> <!-- پیوند به فایل CSS -->
-    <!-- اضافه کردن فونت Vazir از Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Vazir:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- اضافه کردن فونت IRANSans از Google Fonts (در صورت استفاده از سرویس آنلاین) -->
+    <link href="https://fonts.googleapis.com/css2?family=IRANSans:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>مدیریت ورزشکاران</h1>
