--- a/index.html
+++ b/index.html
@@ -78,13 +78,8 @@
             <!-- اطلاعات ورزشکاران در اینجا نمایش داده خواهد شد -->
         </tbody>
     </table>
-
-    <!-- نمودار برای نمایش داده‌ها -->
-    <div>
-        <h2>نمودار ساعات تمرین</h2>
-        <canvas id="trainingChart"></canvas>
-    </div>
-
+    
+    <!-- حذف عنصر نمودار -->
     <script src="script.js"></script>
 </body>
 </html>
