--- a/index.html
+++ b/index.html
@@ -45,13 +45,15 @@
         </div>
         <div class="form-row">
             <div class="form-group" id="days">
-                <label><input type="checkbox" value="شنبه"> شنبه</label>
-                <label><input type="checkbox" value="یکشنبه"> یکشنبه</label>
-                <label><input type="checkbox" value="دوشنبه"> دوشنبه</label>
-                <label><input type="checkbox" value="سه‌شنبه"> سه‌شنبه</label>
-                <label><input type="checkbox" value="چهارشنبه"> چهارشنبه</label>
-                <label><input type="checkbox" value="پنج‌شنبه"> پنج‌شنبه</label>
-                <label><input type="checkbox" value="جمعه"> جمعه</label>
+                <div class="checkbox-group">
+                    <label><input type="checkbox" value="شنبه"> شنبه</label>
+                    <label><input type="checkbox" value="یکشنبه"> یکشنبه</label>
+                    <label><input type="checkbox" value="دوشنبه"> دوشنبه</label>
+                    <label><input type="checkbox" value="سه‌شنبه"> سه‌شنبه</label>
+                    <label><input type="checkbox" value="چهارشنبه"> چهارشنبه</label>
+                    <label><input type="checkbox" value="پنج‌شنبه"> پنج‌شنبه</label>
+                    <label><input type="checkbox" value="جمعه"> جمعه</label>
+                </div>
             </div>
             <div class="form-group">
                 <label for="time">ساعت تمرین</label>
