--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             </div>
         </div>
         <div class="form-row">
-            <div class="form-group" id="days">
+            <div class="form-group">
+                <label>روزهای تمرین</label>
                 <div class="checkbox-group">
                     <label><input type="checkbox" value="شنبه"> شنبه</label>
                     <label><input type="checkbox" value="یکشنبه"> یکشنبه</label>
@@ -80,8 +81,6 @@
             <!-- اطلاعات ورزشکاران در اینجا نمایش داده خواهد شد -->
         </tbody>
     </table>
-    
-    <!-- حذف عنصر نمودار -->
     <script src="script.js"></script>
 </body>
 </html>
