--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                     <label><input type="checkbox" value="جمعه"> جمعه</label>
                 </div>
             </div>
+        </div>
+        <div class="form-row">
             <div class="form-group">
                 <label for="time">ساعت تمرین</label>
                 <select id="time" required></select>
